# LibScout

./: .gitignore  CLAUDE.md  README.md  package.json  project.nix  pyproject.toml
apps/mcp/: package.json
apps/web/: package.json
npins/: sources.json
presentations/: initial.html  intermediate.html
scripts/: demo_scrape_and_parse.py  run_crawl.py
